# ONCHAIN_BEAST

./: .env.example  .gitignore  AUDIT_COMPLETE.md  AUTH_COMPARISON.md  CODE_AUDIT_FIXES_REPORT.md  CRITICAL_IMPROVEMENTS_SUMMARY.md  Cargo.toml  DEPLOYMENT_GUIDE_PERSONAL.md  DEPLOYMENT_READY.md  DEX_SWAP_EXTRACTION_GUIDE.md  EVIDENCE_FRAMEWORK.md  EVIDENCE_FRAMEWORK_COMPLETE.md  EVIDENCE_PROGRESS.md  FILES_CREATED_MODIFIED.md  FINAL_INTEGRATION_COMPLETE.md  FINAL_STATUS.md  GITHUB_SETUP_GUIDE.md  GRAPH_ANALYSIS.md  GRAPH_CODE_STATISTICS.md  GRAPH_DELIVERABLES.md  GRAPH_IMPLEMENTATION_COMPLETE.md  GRAPH_INTEGRATION_GUIDE.md  GRAPH_QUICK_REFERENCE.md  GRAPH_VERIFICATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENTS_STATUS.md  LICENSE  MIDDLEWARE_COMPLETE.md  MIDDLEWARE_STATUS.txt  PHASE_1_TRANSACTION_PARSING_COMPLETE.md  PHASE_2_ENHANCED_PARSING_COMPLETE.md  PHASE_3_FINALIZATION.md  PHASE_3_TOKEN_METADATA_COMPLETE.md  PHASE_4.1_COMPLETE.md  PHASE_4.2_COMPLETE.md  PHASE_4.3_COMPLETE.md  PHASE_4_ANALYSIS_INTEGRATION_COMPLETE.md  PHASE_4_FINALIZATION.md  PHASE_5_PRODUCTION_INFRASTRUCTURE_COMPLETE.md  (+40 more)
config/: database.sql
examples/: solana_integration.rs
macos/: com.onchainbeast.api.plist.template  com.onchainbeast.telegram_bot.plist.template  install_launchd.sh  run_api.sh  run_telegram_bot.sh  uninstall_launchd.sh
migrations/: 004_token_prices.sql
scripts/: backfill_swap_usd_values.sh
src/: lib.rs  main.rs
src/analysis/: mod.rs
src/api/: analysis_api_enhanced.rs  analysis_routes.rs  analytics_routes.rs  handlers.rs  metadata_routes.rs  metrics_routes.rs  mod.rs  parse_routes.rs  price_routes.rs  responses.rs  server.rs  swap_routes.rs  transfer_routes.rs
src/auth/: mod.rs
src/cache/: mod.rs
src/core/: circuit_breaker.rs  config.rs  enhanced_parser.rs  errors.rs  mod.rs  rpc_client.rs  token_metadata.rs  transaction_parser.rs
src/database/: mod.rs  schema.sql  storage.rs
src/dex/: mod.rs  raydium.rs  types.rs
src/graph/: algorithms.rs  examples.rs  integration.rs  metrics.rs  mod.rs  wallet_graph.rs
src/metrics/: mod.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
src/modules/: analysis_service.rs  event_ingestion.rs  exchange_detector.rs  mod.rs  pattern_detector.rs  token_metadata_service.rs  transaction_analyzer.rs  transaction_graph_builder.rs  transaction_handler.rs  transfer_analytics.rs  wallet_tracker.rs
src/price/: enrichment.rs  jupiter.rs  mod.rs  pnl_engine.rs  types.rs
src/storage/: database.rs  mod.rs  redis_cache.rs
tests/: rpc_integration_tests.rs
