[package]
name = "onchain_beast"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana blockchain
solana-sdk = { version = "1.18", features = ["default"] }
solana-client = "1.18"
solana-rpc-client = "1.18"

# Web3 and async runtime
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Web framework
actix-web = "4.4"
actix-rt = "2.9"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"

# Graph analysis
petgraph = "0.6"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# CLI and data structures
clap = { version = "4.0", features = ["derive"] }

# Async utilities
futures = "0.3"
lazy_static = "1.4"
env_logger = "0.11"

# Security & Middleware
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"  # Concurrent hashmap for caching

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

