[package]
name = "onchain_beast"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Web framework
actix-web = "4.4"

# Data serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"

# Async utilities
futures = "0.3"

# Database - Using tokio-postgres for direct control
tokio-postgres = "0.7"

# Telegram Bot
teloxide = { version = "0.17", features = ["macros"] }
pretty_env_logger = "0.5"
